# plugdata-gem

./: .gitmodules  CMakeLists.txt  configure.ac  freetype.cmake  ftgl.cmake
.git-ci/travis-ci/: depinstall-osx.sh
examples/04.pix/: 05.film.pd  05.movie.pd  08.PixDump.pd  24.time-filtering.pd  25.buffer.pd
examples/07.texture/: 06.ripple.pd
examples/13.recursion/: 02.iteration_is_insufficient.pd  nrepeat.pd
examples/data/: anim-1.mov  fractalAlpha.TIF
plugins/QT4L/: recordQT4L.cpp
plugins/V4L/: v4l-videoplugin.pd
src/Base/: CPPExtern.cpp  CPPExtern.h  GemBase.cpp  GemContext.cpp  GemContext.h  GemJUCEContext.h  GemPathBase.cpp  GemPixDualObj.cpp  GemPixObj.cpp  GemShape.cpp  GemWinCreate.h  GemWinCreateMac.cpp  GemWinCreateNT.cpp  GemWindow.cpp  GemWindow.h  TextBase.h  TextBaseFTGL.cpp  TextBaseNone.cpp
src/Controls/: gemcubeframebuffer.cpp  gemframebuffer.cpp  gemhead.cpp  gemkeyboard.cpp  gemkeyname.cpp  gemlist.cpp  gemlist_info.cpp  gemlist_matrix.cpp  gemmanager.cpp  gemmouse.cpp  gemwin.cpp  gemwin.h  modelfiler.cpp
src/Gem/: Dylib.cpp  Event.cpp  Exception.cpp  Files.cpp  GLStack.cpp  GLStack.h  GemConfig.h  GemGLconfig.h  GemGLconfig.h.in  Image.cpp  ImageLoad.cpp  ImageSave.cpp  Manager.cpp  Manager.h  PBuffer.cpp  Settings.cpp  Setup.cpp  State.cpp  State.h  VertexBuffer.cpp  configLinux.h  configNT.h  model.cpp
src/Geos/: gemvertexbuffer.cpp  imageVert.cpp  model.cpp  multimodel.cpp  newWave.cpp  polygon.cpp  rubber.cpp  scopeXYZ~.cpp  sphere3d.cpp  text2d.cpp  text2d.h  text3d.cpp  text3d.h  textextruded.cpp  textextruded.h  textoutline.cpp  textoutline.h  tube.cpp
src/Manips/: fragment_program.cpp  gemrepeat.cpp  glsl_fragment.cpp  glsl_geometry.cpp  glsl_program.cpp  glsl_tesscontrol.cpp  glsl_tesseval.cpp  glsl_vertex.cpp  ortho.cpp  vertex_program.cpp
src/Nongeos/: world_light.cpp
src/Output/: gemjucewindow.h  gemw32window.cpp
src/Particles/: part_draw.cpp  part_sink.cpp  part_source.cpp  part_velcone.cpp  part_velocity.cpp  part_velsphere.cpp
src/Pixes/: pix_2grey.cpp  pix_add.cpp  pix_background.cpp  pix_biquad.cpp  pix_bitmask.cpp  pix_blob.cpp  pix_blur.cpp  pix_buffer.cpp  pix_buffer_read.cpp  pix_buffer_write.cpp  pix_chroma_key.cpp  pix_colormatrix.cpp  pix_compare.cpp  pix_contrast.cpp  pix_convolve.cpp  pix_coordinate.cpp  pix_cubemap.cpp  pix_curve.cpp  pix_data.cpp  pix_dot.cpp  pix_equal.cpp  pix_film.cpp  pix_freeframe.cpp  pix_frei0r.cpp  pix_gain.cpp  pix_histo.cpp  pix_image.cpp  pix_imageInPlace.cpp  pix_mix.cpp  pix_motionblur.cpp  pix_movement2.cpp  pix_multiblob.cpp  pix_multiimage.cpp  pix_multitexture.cpp  pix_offset.cpp  pix_pix2sig~.cpp  pix_record.cpp  pix_rectangle.cpp  pix_resize.cpp  pix_rgba.cpp  (+15 more)
src/RTE/: RTE.cpp  Symbol.cpp
src/Utils/: GLUtil.cpp  GLUtil_define.cpp  GLUtil_define_generated.h  GLUtil_define_generator.sh  Matrix.cpp  SIMD.cpp  Thread.cpp  WorkerThread.cpp  plist.h
src/Vertex/: vertex_add.cpp  vertex_draw.cpp  vertex_info.cpp  vertex_offset.cpp  vertex_scale.cpp  vertex_set.cpp  vertex_tabread.cpp
src/openGL/: GEMglActiveTexture.cpp  GEMglActiveTextureARB.cpp  GEMglAreTexturesResident.cpp  GEMglArrayElement.cpp  GEMglBindProgramARB.cpp  GEMglBindTexture.cpp  GEMglBlendEquation.cpp  GEMglCopyTexImage1D.cpp  GEMglCopyTexImage2D.cpp  GEMglCopyTexSubImage1D.cpp  GEMglCopyTexSubImage2D.cpp  GEMglDeleteTextures.cpp  GEMglDisableClientState.cpp  GEMglDrawArrays.cpp  GEMglDrawElements.cpp  GEMglEnableClientState.cpp  GEMglEvalCoord1d.cpp  GEMglEvalCoord1dv.cpp  GEMglEvalCoord1f.cpp  GEMglEvalCoord1fv.cpp  GEMglEvalCoord2d.cpp  GEMglEvalCoord2dv.cpp  GEMglEvalCoord2f.cpp  GEMglEvalCoord2fv.cpp  GEMglEvalMesh1.cpp  GEMglEvalMesh2.cpp  GEMglEvalPoint1.cpp  GEMglEvalPoint2.cpp  GEMglFeedbackBuffer.cpp  GEMglFogf.cpp  GEMglFogfv.cpp  GEMglFogi.cpp  GEMglFogiv.cpp  GEMglGenProgramsARB.cpp  GEMglGenTextures.cpp  GEMglGenerateMipmap.cpp  GEMglGetFloatv.cpp  GEMglGetIntegerv.cpp  GEMglGetMapdv.cpp  GEMglGetMapfv.cpp  (+43 more)
src/plugins/: film.h  imageloader.h  imagesaver.h  modelloader.cpp  modelloader.h  record.h  video.h  videoBase.cpp
src/plugins/ASSIMP3/: modelASSIMP3.cpp  modelASSIMP3.h
src/plugins/ASSIMP3/assimp/: CMakeLists.txt
src/plugins/ASSIMP3/assimp/code/: 3DSConverter.cpp  ACLoader.cpp  BlenderModifier.cpp  CMakeLists.txt  CalcTangentsProcess.cpp  Exporter.cpp  FBXMeshGeometry.cpp  FindInvalidDataProcess.cpp  GenVertexNormalsProcess.cpp  IFCLoader.cpp  IFCMaterial.cpp  IFCUtil.cpp  ImproveCacheLocality.cpp  LWOAnimation.cpp  LWOFileData.h  LWOLoader.cpp  MD2Loader.cpp  NFFLoader.cpp  OgreParsingUtils.h  OptimizeMeshes.cpp  PlyParser.cpp  Q3DLoader.cpp  RemoveVCProcess.cpp  STEPFile.h  STEPFileReader.cpp  SmoothingGroups.inl  SortByPTypeProcess.cpp  StringComparison.h  TerragenLoader.cpp
src/plugins/ASSIMP3/assimp/contrib/unzip/: unzip.c
src/plugins/ASSIMP3/assimp/contrib/zlib/: CMakeLists.txt
src/plugins/ASSIMP3/assimp/include/assimp/: material.inl  types.h
src/plugins/PNM/: recordPNM.cpp
src/plugins/STB/: imageSTB.cpp  imageSTB.h
src/plugins/V4L2/: recordV4L2.h  videoV4L2.cpp  videoV4L2.h
src/plugins/V4L2/libv4l2/libv4l2/: log.c
src/plugins/V4L2/libv4l2/libv4lconvert/: libv4lconvert.c  libv4lsyscall-priv.h
src/plugins/VFW/: videoVFW.cpp
src/plugins/videoAVF/: videoAVF.mm
