cmake_minimum_required(VERSION 3.15)

project(Gem LANGUAGES C CXX)

set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

set(GEM_SOURCE_PATH "./src")

file(GLOB GEM_SOURCES
  ${GEM_SOURCE_PATH}/Base/CPPExtern.cpp
  ${GEM_SOURCE_PATH}/Base/GemBase.cpp
  ${GEM_SOURCE_PATH}/Base/GemContext.cpp
  ${GEM_SOURCE_PATH}/Base/GemGluObj.cpp
  ${GEM_SOURCE_PATH}/Base/GemPathBase.cpp
  ${GEM_SOURCE_PATH}/Base/GemPixDualObj.cpp
  ${GEM_SOURCE_PATH}/Base/GemPixObj.cpp
  ${GEM_SOURCE_PATH}/Base/GemShape.cpp
  ${GEM_SOURCE_PATH}/Base/GemVertex.cpp
  ${GEM_SOURCE_PATH}/Base/GemWindow.cpp
  ${GEM_SOURCE_PATH}/Base/TextBaseFTGL.cpp
  ${GEM_SOURCE_PATH}/Base/TextBaseNone.cpp
  ${GEM_SOURCE_PATH}/Controls/gemcubeframebuffer.cpp
  ${GEM_SOURCE_PATH}/Controls/gemframebuffer.cpp
  ${GEM_SOURCE_PATH}/Controls/gemhead.cpp
  ${GEM_SOURCE_PATH}/Controls/gemkeyboard.cpp
  ${GEM_SOURCE_PATH}/Controls/gemkeyname.cpp
  ${GEM_SOURCE_PATH}/Controls/gemlist.cpp
  ${GEM_SOURCE_PATH}/Controls/gemlist_info.cpp
  ${GEM_SOURCE_PATH}/Controls/gemlist_matrix.cpp
  ${GEM_SOURCE_PATH}/Controls/gemmanager.cpp
  ${GEM_SOURCE_PATH}/Controls/gemmouse.cpp
  ${GEM_SOURCE_PATH}/Controls/gemreceive.cpp
  ${GEM_SOURCE_PATH}/Controls/gemwin.cpp
  ${GEM_SOURCE_PATH}/Controls/modelfiler.cpp
  ${GEM_SOURCE_PATH}/Controls/render_trigger.cpp
  ${GEM_SOURCE_PATH}/Gem/Cache.cpp
  ${GEM_SOURCE_PATH}/Gem/ContextData.cpp
  ${GEM_SOURCE_PATH}/Gem/Dylib.cpp
  ${GEM_SOURCE_PATH}/Gem/Event.cpp
  ${GEM_SOURCE_PATH}/Gem/Exception.cpp
  ${GEM_SOURCE_PATH}/Gem/Files.cpp
  ${GEM_SOURCE_PATH}/Gem/GLStack.cpp
  ${GEM_SOURCE_PATH}/Gem/Image.cpp
  ${GEM_SOURCE_PATH}/Gem/ImageLoad.cpp
  ${GEM_SOURCE_PATH}/Gem/ImageSave.cpp
  ${GEM_SOURCE_PATH}/Gem/Loaders.cpp
  ${GEM_SOURCE_PATH}/Gem/Manager.cpp
  ${GEM_SOURCE_PATH}/Gem/PBuffer.cpp
  ${GEM_SOURCE_PATH}/Gem/PixConvertAltivec.cpp
  ${GEM_SOURCE_PATH}/Gem/PixConvertSSE2.cpp
  ${GEM_SOURCE_PATH}/Gem/Properties.cpp
  ${GEM_SOURCE_PATH}/Gem/Rectangle.cpp
  ${GEM_SOURCE_PATH}/Gem/Settings.cpp
  ${GEM_SOURCE_PATH}/Gem/Setup.cpp
  ${GEM_SOURCE_PATH}/Gem/State.cpp
  ${GEM_SOURCE_PATH}/Gem/VertexBuffer.cpp
  ${GEM_SOURCE_PATH}/Geos/GemSplash.cpp
  ${GEM_SOURCE_PATH}/Geos/circle.cpp
  ${GEM_SOURCE_PATH}/Geos/colorSquare.cpp
  ${GEM_SOURCE_PATH}/Geos/cone.cpp
  ${GEM_SOURCE_PATH}/Geos/cube.cpp
  ${GEM_SOURCE_PATH}/Geos/cuboid.cpp
  ${GEM_SOURCE_PATH}/Geos/curve.cpp
  ${GEM_SOURCE_PATH}/Geos/curve3d.cpp
  ${GEM_SOURCE_PATH}/Geos/cylinder.cpp
  ${GEM_SOURCE_PATH}/Geos/disk.cpp
  ${GEM_SOURCE_PATH}/Geos/gemvertexbuffer.cpp
  ${GEM_SOURCE_PATH}/Geos/imageVert.cpp
  ${GEM_SOURCE_PATH}/Geos/mesh_line.cpp
  ${GEM_SOURCE_PATH}/Geos/mesh_square.cpp
  ${GEM_SOURCE_PATH}/Geos/model.cpp
  ${GEM_SOURCE_PATH}/Geos/multimodel.cpp
  ${GEM_SOURCE_PATH}/Geos/newWave.cpp
  ${GEM_SOURCE_PATH}/Geos/polygon.cpp
  ${GEM_SOURCE_PATH}/Geos/pqtorusknots.cpp
  ${GEM_SOURCE_PATH}/Geos/primTri.cpp
  ${GEM_SOURCE_PATH}/Geos/rectangle.cpp
  ${GEM_SOURCE_PATH}/Geos/ripple.cpp
  ${GEM_SOURCE_PATH}/Geos/rubber.cpp
  ${GEM_SOURCE_PATH}/Geos/scopeXYZ~.cpp
  ${GEM_SOURCE_PATH}/Geos/slideSquares.cpp
  ${GEM_SOURCE_PATH}/Geos/sphere.cpp
  ${GEM_SOURCE_PATH}/Geos/sphere3d.cpp
  ${GEM_SOURCE_PATH}/Geos/square.cpp
  ${GEM_SOURCE_PATH}/Geos/surface3d.cpp
  ${GEM_SOURCE_PATH}/Geos/teapot.cpp
  ${GEM_SOURCE_PATH}/Geos/text2d.cpp
  ${GEM_SOURCE_PATH}/Geos/text3d.cpp
  ${GEM_SOURCE_PATH}/Geos/textextruded.cpp
  ${GEM_SOURCE_PATH}/Geos/textoutline.cpp
  ${GEM_SOURCE_PATH}/Geos/torus.cpp
  ${GEM_SOURCE_PATH}/Geos/trapezoid.cpp
  ${GEM_SOURCE_PATH}/Geos/triangle.cpp
  ${GEM_SOURCE_PATH}/Geos/tube.cpp
  ${GEM_SOURCE_PATH}/Manips/accumrotate.cpp
  ${GEM_SOURCE_PATH}/Manips/alpha.cpp
  ${GEM_SOURCE_PATH}/Manips/ambient.cpp
  ${GEM_SOURCE_PATH}/Manips/ambientRGB.cpp
  ${GEM_SOURCE_PATH}/Manips/camera.cpp
  ${GEM_SOURCE_PATH}/Manips/color.cpp
  ${GEM_SOURCE_PATH}/Manips/colorRGB.cpp
  ${GEM_SOURCE_PATH}/Manips/depth.cpp
  ${GEM_SOURCE_PATH}/Manips/diffuse.cpp
  ${GEM_SOURCE_PATH}/Manips/diffuseRGB.cpp
  ${GEM_SOURCE_PATH}/Manips/emission.cpp
  ${GEM_SOURCE_PATH}/Manips/emissionRGB.cpp
  ${GEM_SOURCE_PATH}/Manips/fragment_program.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_fragment.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_geometry.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_program.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_tesscontrol.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_tesseval.cpp
  ${GEM_SOURCE_PATH}/Manips/glsl_vertex.cpp
  ${GEM_SOURCE_PATH}/Manips/linear_path.cpp
  ${GEM_SOURCE_PATH}/Manips/ortho.cpp
  ${GEM_SOURCE_PATH}/Manips/polygon_smooth.cpp
  ${GEM_SOURCE_PATH}/Manips/rotate.cpp
  ${GEM_SOURCE_PATH}/Manips/rotateXYZ.cpp
  ${GEM_SOURCE_PATH}/Manips/scale.cpp
  ${GEM_SOURCE_PATH}/Manips/scaleXYZ.cpp
  ${GEM_SOURCE_PATH}/Manips/separator.cpp
  ${GEM_SOURCE_PATH}/Manips/shearXY.cpp
  ${GEM_SOURCE_PATH}/Manips/shearXZ.cpp
  ${GEM_SOURCE_PATH}/Manips/shearYX.cpp
  ${GEM_SOURCE_PATH}/Manips/shearYZ.cpp
  ${GEM_SOURCE_PATH}/Manips/shearZX.cpp
  ${GEM_SOURCE_PATH}/Manips/shearZY.cpp
  ${GEM_SOURCE_PATH}/Manips/shininess.cpp
  ${GEM_SOURCE_PATH}/Manips/specular.cpp
  ${GEM_SOURCE_PATH}/Manips/specularRGB.cpp
  ${GEM_SOURCE_PATH}/Manips/spline_path.cpp
  ${GEM_SOURCE_PATH}/Manips/translate.cpp
  ${GEM_SOURCE_PATH}/Manips/translateXYZ.cpp
  ${GEM_SOURCE_PATH}/Manips/vertex_program.cpp
  ${GEM_SOURCE_PATH}/Nongeos/light.cpp
  ${GEM_SOURCE_PATH}/Nongeos/spot_light.cpp
  ${GEM_SOURCE_PATH}/Nongeos/world_light.cpp
  ${GEM_SOURCE_PATH}/Particles/papi/actionapi.cpp
  ${GEM_SOURCE_PATH}/Particles/papi/actions.cpp
  ${GEM_SOURCE_PATH}/Particles/papi/opengl.cpp
  ${GEM_SOURCE_PATH}/Particles/papi/system.cpp
  ${GEM_SOURCE_PATH}/Particles/part_color.cpp
  ${GEM_SOURCE_PATH}/Particles/part_damp.cpp
  ${GEM_SOURCE_PATH}/Particles/part_draw.cpp
  ${GEM_SOURCE_PATH}/Particles/part_follow.cpp
  ${GEM_SOURCE_PATH}/Particles/part_gravity.cpp
  ${GEM_SOURCE_PATH}/Particles/part_head.cpp
  ${GEM_SOURCE_PATH}/Particles/part_info.cpp
  ${GEM_SOURCE_PATH}/Particles/part_killold.cpp
  ${GEM_SOURCE_PATH}/Particles/part_killslow.cpp
  ${GEM_SOURCE_PATH}/Particles/part_orbitpoint.cpp
  ${GEM_SOURCE_PATH}/Particles/part_render.cpp
  ${GEM_SOURCE_PATH}/Particles/part_sink.cpp
  ${GEM_SOURCE_PATH}/Particles/part_size.cpp
  ${GEM_SOURCE_PATH}/Particles/part_source.cpp
  ${GEM_SOURCE_PATH}/Particles/part_targetcolor.cpp
  ${GEM_SOURCE_PATH}/Particles/part_targetsize.cpp
  ${GEM_SOURCE_PATH}/Particles/part_velcone.cpp
  ${GEM_SOURCE_PATH}/Particles/part_velocity.cpp
  ${GEM_SOURCE_PATH}/Particles/part_velsphere.cpp
  ${GEM_SOURCE_PATH}/Particles/part_vertex.cpp
  ${GEM_SOURCE_PATH}/Particles/partlib_base.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_2grey.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_a_2grey.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_add.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_aging.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_alpha.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_background.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_backlight.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_biquad.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_bitmask.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_blob.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_blur.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_buf.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_buffer.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_buffer_read.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_buffer_write.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_chroma_key.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_clearblock.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_color.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_coloralpha.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_colorclassify.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_colormatrix.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_colorreduce.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_compare.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_composite.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_contrast.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_convert.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_convolve.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_coordinate.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_crop.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_cubemap.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_curve.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_data.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_deinterlace.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_delay.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_diff.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_dot.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_draw.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_dump.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_duotone.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_emboss.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_equal.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_film.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_flip.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_freeframe.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_frei0r.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_gain.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_grey.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_halftone.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_histo.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_hsv2rgb.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_image.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_imageInPlace.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_info.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_invert.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_kaleidoscope.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_levels.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_lumaoffset.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_mask.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_mean_color.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_metaimage.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_mix.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_motionblur.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_movement.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_movement2.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_movie.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_multiblob.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_multiimage.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_multiply.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_multitexture.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_noise.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_normalize.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_offset.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_pix2sig.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_posterize.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_puzzle.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_rds.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_record.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_rectangle.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_refraction.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_resize.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_rgb2hsv.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_rgba.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_roi.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_roll.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_rtx.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_scanline.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_set.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_share_read.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_share_write.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_sig2pix.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_snap.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_snap2tex.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_subtract.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_tIIR.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_tIIRf.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_takealpha.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_test.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_texture.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_threshold.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_threshold_bernsen.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_video.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_vpaint.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_write.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_writer.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_yuv.cpp
  ${GEM_SOURCE_PATH}/Pixes/pix_zoom.cpp
  ${GEM_SOURCE_PATH}/RTE/Array.cpp
  ${GEM_SOURCE_PATH}/RTE/Outlet.cpp
  ${GEM_SOURCE_PATH}/RTE/RTE.cpp
  ${GEM_SOURCE_PATH}/RTE/Symbol.cpp
  ${GEM_SOURCE_PATH}/Utils/Functions.cpp
  ${GEM_SOURCE_PATH}/Utils/GLUtil.cpp
  ${GEM_SOURCE_PATH}/Utils/GLUtil_define.cpp
  ${GEM_SOURCE_PATH}/Utils/GemString.cpp
  ${GEM_SOURCE_PATH}/Utils/MSVCMinGW.cpp
  ${GEM_SOURCE_PATH}/Utils/Matrix.cpp
  ${GEM_SOURCE_PATH}/Utils/SIMD.cpp
  ${GEM_SOURCE_PATH}/Utils/SynchedWorkerThread.cpp
  ${GEM_SOURCE_PATH}/Utils/Thread.cpp
  ${GEM_SOURCE_PATH}/Utils/ThreadMutex.cpp
  ${GEM_SOURCE_PATH}/Utils/ThreadSemaphore.cpp
  ${GEM_SOURCE_PATH}/Utils/Vector.cpp
  ${GEM_SOURCE_PATH}/Utils/WorkerThread.cpp
  ${GEM_SOURCE_PATH}/Utils/plist.cpp
  ${GEM_SOURCE_PATH}/Utils/pstk.cpp
  ${GEM_SOURCE_PATH}/Version.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_add.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_combine.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_draw.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_grid.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_info.cpp
# ${GEM_SOURCE_PATH}/Vertex/vertex_model.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_mul.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_offset.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_quad.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_scale.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_set.cpp
  ${GEM_SOURCE_PATH}/Vertex/vertex_tabread.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglAccum.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglActiveTexture.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglActiveTextureARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglAlphaFunc.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglAreTexturesResident.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglArrayElement.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBegin.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBindProgramARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBindTexture.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBitmap.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBlendEquation.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglBlendFunc.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCallList.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClear.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClearAccum.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClearColor.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClearDepth.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClearIndex.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClearStencil.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglClipPlane.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3b.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3bv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3ub.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3ubv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3ui.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3uiv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3us.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor3usv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4b.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4bv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4ub.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4ubv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4ui.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4uiv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4us.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColor4usv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColorMask.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglColorMaterial.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCopyPixels.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCopyTexImage1D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCopyTexImage2D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCopyTexSubImage1D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCopyTexSubImage2D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglCullFace.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDeleteTextures.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDepthFunc.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDepthMask.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDepthRange.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDisable.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDisableClientState.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDrawArrays.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDrawBuffer.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglDrawElements.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEdgeFlag.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEnable.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEnableClientState.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEnd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEndList.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord1d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord1dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord1f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord1fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord2dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalCoord2fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalMesh1.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalMesh2.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalPoint1.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglEvalPoint2.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFeedbackBuffer.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFinish.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFlush.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFogf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFogfv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFogi.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFogiv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFrontFace.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglFrustum.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGenLists.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGenProgramsARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGenTextures.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGenerateMipmap.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetError.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetFloatv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetIntegerv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetMapdv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetMapfv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetMapiv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetPointerv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglGetString.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglHint.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexMask.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexdv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexfv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexi.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexiv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexs.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexsv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexub.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIndexubv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglInitNames.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIsEnabled.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIsList.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglIsTexture.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLightModelf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLightModeli.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLightf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLighti.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLineStipple.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLineWidth.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadIdentity.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadMatrixd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadMatrixf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadName.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadTransposeMatrixd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLoadTransposeMatrixf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglLogicOp.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMap1d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMap1f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMap2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMap2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMapGrid1d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMapGrid1f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMapGrid2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMapGrid2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMaterialf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMaterialfv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMateriali.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMatrixMode.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultMatrixd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultMatrixf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultTransposeMatrixd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultTransposeMatrixf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultiTexCoord2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglMultiTexCoord2fARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNewList.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3b.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3bv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglNormal3sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglOrtho.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPassThrough.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPixelStoref.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPixelStorei.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPixelTransferf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPixelTransferi.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPixelZoom.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPointSize.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPolygonMode.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPolygonOffset.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPopAttrib.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPopClientAttrib.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPopMatrix.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPopName.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPrioritizeTextures.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglProgramEnvParameter4dARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglProgramEnvParameter4fvARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglProgramLocalParameter4fvARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglProgramStringARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPushAttrib.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPushClientAttrib.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPushMatrix.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglPushName.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos2sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos3sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRasterPos4sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRectd.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRectf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRecti.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRects.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRenderMode.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglReportError.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRotated.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglRotatef.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglScaled.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglScalef.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglScissor.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglSelectBuffer.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglShadeModel.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglStencilFunc.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglStencilMask.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglStencilOp.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord1sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord2sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord3sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexCoord4sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexEnvf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexEnvi.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexGend.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexGenf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexGenfv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexGeni.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexImage2D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexParameterf.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexParameteri.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexSubImage1D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTexSubImage2D.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTranslated.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglTranslatef.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglUniform1f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglUniform1fARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglUseProgramObjectARB.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex2sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex3sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4d.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4dv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4f.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4fv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4i.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4iv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4s.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglVertex4sv.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMglViewport.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMgluLookAt.cpp
  ${GEM_SOURCE_PATH}/openGL/GEMgluPerspective.cpp
  ${GEM_SOURCE_PATH}/openGL/GLdefine.cpp
  ${GEM_SOURCE_PATH}/plugins/PluginFactory.cpp
  ${GEM_SOURCE_PATH}/plugins/film.cpp
  ${GEM_SOURCE_PATH}/plugins/imageloader.cpp
  ${GEM_SOURCE_PATH}/plugins/imagesaver.cpp
  ${GEM_SOURCE_PATH}/plugins/modelloader.cpp
  ${GEM_SOURCE_PATH}/plugins/record.cpp
  ${GEM_SOURCE_PATH}/plugins/video.cpp
  ${GEM_SOURCE_PATH}/plugins/videoBase.cpp
)

add_subdirectory(glew/build/cmake)

set(MESSAGE_QUIET ON)

set(BUILD_SHARED_LIBS OFF) # Build ftgl and freetype as static libs

add_subdirectory(ftgl)
target_compile_definitions(ftgl PRIVATE __FUNC__="func")
get_target_property(FTGL_INCLUDES ftgl INTERFACE_INCLUDE_DIRECTORIES)

#
set(FT_DISABLE_ZLIB TRUE)
set(FT_DISABLE_PNG TRUE)
set(FT_DISABLE_HARFBUZZ TRUE)
set(FT_DISABLE_BROTLI TRUE)

add_subdirectory(freetype)

set(MESSAGE_QUIET OFF)

add_library(Gem STATIC ${GEM_SOURCES})
target_compile_definitions(Gem PRIVATE HAS_FTGL=1)
target_include_directories(Gem PUBLIC ${GEM_SOURCE_PATH} "../pure-data/src" "./glew/include" "./ftgl/src" "./ftgl/src/FTFont" "./ftgl/src/FTGL" "./freetype/include")
target_compile_options(Gem PRIVATE -fvisibility=default)

add_library(Gem-multi STATIC ${GEM_SOURCES})
target_compile_definitions(Gem-multi PRIVATE HAS_FTGL=1 PDTHREADS=1 PDINSTANCE=1)
target_include_directories(Gem-multi PUBLIC ${GEM_SOURCE_PATH} "../pure-data/src" "./glew/include" "./ftgl/src"  "./ftgl/src/FTFont" "./ftgl/src/FTGL" "./freetype/include")
target_compile_options(Gem-multi PRIVATE -fvisibility=default)


